# santorini-ai

./: .gitignore  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  requirements.txt  rust-toolchain.toml
.github/workflows/: release.yml  web_app.yml
battler/: Cargo.toml
battler/src/: lib.rs  main.rs  sprt.rs
bullet_prep/: Cargo.toml
bullet_prep/src/: main.oldrs  main.rs
data/: corpus.yaml  move_test.yaml  remote_datagen_script.sh  short_move_test.yaml  standing_move_test.yaml
datagen/: Cargo.toml
datagen/src/: main.rs
electron/: index.html  index.js  main.js  package-lock.json  package.json
electron/gui/: package-lock.json  package.json
electron/gui/public/: index.html
electron/gui/src/: App.tsx  GodSelector.tsx  MatchupsTable.tsx
electron/gui/src/common/: gods.tsx
game_data/: gamedata-ExXhMzkXylFCaPM.txt  gamedata-GDpydZxG3icjCHa.txt  gamedata-Sz3DDJgJuaXcGaw.txt  gamedata-UG06q9IHVoCxwC7.txt  gamedata-aOPlwghvRgN9NR1.txt  gamedata-h7Z1a7pdXuZbBxs.txt  gamedata-v53IX7rtCCnJwDM.txt
notes/: references.md  uci.md
python/: pull_data.py  read_matchups.py  ui.py
santorini_core/: Cargo.toml
santorini_core/src/: bitboard.rs  board.rs  consistency_checker.rs  direction.rs  engine.rs  fen.rs  gods.rs  hashing.rs  lib.rs  main.rs  matchup.rs  move_container.rs  move_helpers.rs  move_picker.rs  move_verifier.rs  nnue.rs  placement.rs  player.rs  pretty_board.rs  random_utils.rs  search.rs  search_terminators.rs  square.rs  transposition_table.rs  uci_types.rs  utils.rs
santorini_core/src/binasdf/: cli_play.rs
santorini_core/src/gods/: achilles.rs  aeolus.rs  aphrodite.rs  apollo.rs  apollo_v2.rs  ares.rs  artemis.rs  asteria.rs  athena.rs  atlas.rs  bellerophon.rs  bia.rs  castor.rs  charon.rs  charon_v2.rs  chronus.rs  clio.rs  demeter.rs  eros.rs  europa.rs  generic.rs  graeae.rs  hades.rs  harpies.rs  hephaestus.rs  hera.rs  hermes.rs  hestia.rs  hippolyta.rs  hydra.rs  hypnus.rs  iris.rs  jason.rs  limus.rs  maenads.rs  medusa.rs  minotaur.rs  morpheus.rs  mortal.rs  move_helpers.rs  (+15 more)
santorini_core/src/oldbin/: adhoc.rs
santorini_core/src/placement/: common.rs  female.rs  opposite.rs  perimeter.rs  standard.rs  three_worker.rs
santorini_engine/: Cargo.toml
santorini_engine/src/: board.rs  engine.rs  fen.rs  lib.rs  main.rs  search.rs  uci_types.rs
santorini_engine/src/binasdf/: adhoc.rs
src/: board.rs  engine.rs  fen.rs  lib.rs  search.rs  transposition_table.rs
uci/: Cargo.toml  README.md
uci/src/: main.rs
ui/: Cargo.toml  build.rs
ui/src/: dropdown.rs  main.rs
wasm-app/: Cargo.toml
wasm-app/src/: lib.rs
wasm_app/: Cargo.toml
wasm_app/src/: lib.rs
web_app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web_app/src/: App.tsx  index.css
web_app/src/ai/: ai_worker.ts  worker_inner.ts
web_app/src/common/: action_selector.tsx  api.tsx  fen.test.tsx  fen.tsx  game_state.tsx  utils.tsx
web_app/src/components/: FullGamePlayer.css  FullGamePlayer.tsx  GameGridCanvas.css  GameGridCanvas.tsx  GodPicker.css  GodPicker.tsx  MenuScreen.css  MenuScreen.tsx
