[workspace]
resolver ="3"
members = [
    "santorini_core",
    "uci",
    "battler",
    "datagen",
    "bullet_prep",
]

[workspace.dependencies]
colored = "2.0.4"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
clap = {version="4.5.40", features = ["derive"]}

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
