[workspace]
resolver ="3"
members = [
    "santorini_core",
    "uci",
    "battler",
    "datagen",
    "bullet_prep",
    "wasm-app",
]

[workspace.dependencies]
colored = "2.0.4"
rand = { version = "0.9" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
clap = {version="4.5.40", features = ["derive"]}
serde_yaml = "0.9.34"

[profile.release]
opt-level = 3
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
debug = false

# debug = "line-tables-only"
