[package]
name = "bullet_prep"
version = "0.1.0"
edition = "2024"
repository="https://github.com/JPricey/santorini-ai"
publish=false

[dependencies]
santorini_core = { path = "../santorini_core" }
colored = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
chrono = "0.4.41"
clap = {workspace=true}
rand = {workspace=true}
num_cpus = "1.17.0"
