cargo-features = ["profile-rustflags"]

[package]
name = "santorini_core"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = {workspace=true}
rand = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
rustflags = ["-C", "target-cpu=native"]
