[package]
name = "santorini_core"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
strum = {workspace=true}
clap = {workspace=true}
serde_yaml = {workspace=true}
colorous = "1.0.16"
arrayvec = "0.7.6"
chrono = "0.4.41"
rand = { workspace=true}
