[package]
name = "santorini_core"
version = "0.1.0"
edition = "2024"
repository="https://github.com/JPricey/santorini-ai"
publish=false

[dependencies]
colored = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
strum = {workspace=true}
clap = {workspace=true}
serde_yaml = {workspace=true}
colorous = "1.0.16"
arrayvec = "0.7.6"
chrono = "0.4.41"
rand = { workspace=true}
const_for = "0.1.5"
itertools = "0.14.0"
counted-array = "0.1.2"
