cargo-features = ["profile-rustflags"]

[package]
name = "uci"
version = "0.1.0"
edition = "2024"

[dependencies]
santorini_core = { path = "../santorini_core" }
colored = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"
rustflags = ["-C", "target-cpu=native"]
