[package]
name = "wasm_app"
version = "0.1.0"
edition = "2024"
repository="https://github.com/JPricey/santorini-ai"
publish=false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {workspace=true}
getrandom = { version = "0.3", features = ["wasm_js"] }
santorini_core = { path = "../santorini_core" }
wasm-bindgen = { version = "0.2.1", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.77"
